--- a/index.html
+++ b/index.html
@@ -788,8 +788,11 @@ figure {
     </div>
   
  <div id="main">
-    
-        <h1 id="งツว-1980--͜ʖ͡">(งツ)ว 1980 (° ͜ʖ͡°)╭∩╮</h1>
+
+
+  <h1>GitGitGadget</h1>
+  <img src="https://gitgitgadget.github.io/images/gitgitgadget-explanation.png" alt="GitGitGadget" />        <h1 id="งツว-1980--͜ʖ͡">(งツ)ว 1980 (° ͜ʖ͡°)╭∩╮</h1>
+  <p>So you cloned https://github.com/git/git and implemented a bug fix or a new feature? And you already pushed it to your own fork?</p> <a href="https://gitgitgadget.github.io/#how-can-you-use-gitgitgadget">ReadMore</a>
 <h3 id="is-that-all-there-is---peggy-lee"><a href="https://www.youtube.com/watch?v=QPP6UgkmyM4">Is That All There Is? - Peggy Lee</a></h3>
 <h1 id="‿つ-1980">⊂(◉‿◉)つ 1980</h1>
 <p>im still your friend, i think u will like this <a href="https://youtu.be/KHDOj2QxAfQ?t=483">Hexstatic - Solid Steel Presents Hexstatic: Listen &amp; Learn (full mix-CD)</a>
